# toy-raytracing

./: .gitignore  README.md  toy-raytracing.code-workspace
00_toy_cpu/: README.md
01_hello_vulkan_raytacing/: README.md
01_hello_vulkan_raytacing/hello_vulkan_raytracing/: Cargo.toml  shader_compile.bat
01_hello_vulkan_raytacing/hello_vulkan_raytracing/src/: app.rs  main.rs
01_hello_vulkan_raytacing/hello_vulkan_raytracing/src/shaders/spv/: closesthit.rchit.spv  miss.rmiss.spv  raygen.rgen.spv
01_hello_vulkan_raytacing/hello_vulkan_raytracing/src/shaders/src/: closesthit.rchit  raygen.rgen
02_toy_vk/: Cargo.toml  README.md
02_toy_vk/ashtray/: Cargo.toml
02_toy_vk/ashtray/src/: acceleration_structure.rs  allocation.rs  allocator.rs  buffer.rs  command_buffer.rs  command_pool.rs  compute_pipeline.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  fence.rs  handles.rs  image.rs  image_view.rs  instance.rs  lib.rs  pipeline_layout.rs  raytracing_pipeline.rs  sampler.rs  semaphore.rs  shader_module.rs  surface.rs  swapchain.rs  utils.rs
02_toy_vk/ashtray/src/handles/: compute_pipeline.rs  descriptor_set.rs  device.rs  image.rs  image_view.rs  pipeline_layout.rs  raytracing_pipeline.rs  shader_module.rs  surface.rs  swapchain.rs
02_toy_vk/ashtray/src/utils/: buffer.rs  command_buffer.rs  compute.rs  image.rs  ray_tracing.rs  setup.rs  sync_objects.rs
02_toy_vk/renderer/: Cargo.toml  shader_compile.bat
02_toy_vk/renderer/src/: lib.rs  renderer.rs  scene.rs
02_toy_vk/renderer/src/shaders/spv/: closesthit.rchit.spv  final.comp.spv  miss.rmiss.spv  raygen.rgen.spv  tonemap.comp.spv
02_toy_vk/renderer/src/shaders/src/: closesthit.rchit  miss.rmiss  raygen.rgen  tonemap.comp
02_toy_vk/viewer/: Cargo.toml
02_toy_vk/viewer/src/: main.rs  pane.rs  scene_view.rs
03_glb_pbr/: README.md
03_glb_pbr/renderer/: Cargo.toml  shader_compile.bat
03_glb_pbr/renderer/src/: lib.rs  renderer.rs  scene.rs
03_glb_pbr/renderer/src/shaders/spv/: closesthit.rchit.spv  final.comp.spv  miss.rmiss.spv  raygen.rgen.spv
03_glb_pbr/renderer/src/shaders/spv/opaque/: closesthit.rchit.spv
03_glb_pbr/renderer/src/shaders/src/: bxdf.glsl  closesthit.rchit  common.glsl  final.comp  materials.glsl  miss.rmiss  payload.glsl  push_constants.glsl  random.glsl  raygen.rgen
04_sun_sky/: Cargo.toml  README.md
04_sun_sky/viewer/: Cargo.toml
04_sun_sky/viewer/src/: main.rs  pane.rs  scene_view.rs  tree_behaviour.rs
05_oidn/: Cargo.toml  README.md
05_oidn/ashtray/: Cargo.toml  README.md
05_oidn/ashtray/src/: utils.rs
05_oidn/ashtray/src/handles/: allocation.rs  buffer.rs  command_buffer.rs  compute_pipeline.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  image.rs  instance.rs  raytracing_pipeline.rs
05_oidn/ashtray/src/utils/: descriptor_set.rs  ray_tracing.rs  setup.rs  shader.rs  shared_buffer.rs
05_oidn/glb/: Cargo.toml
05_oidn/glb/src/: glb_data.rs  lib.rs  scene.rs
05_oidn/glb/src/scene/: model.rs
05_oidn/glb/src/scene/model/: material.rs
05_oidn/oidn/: Cargo.toml
05_oidn/oidn-sys/: .gitignore  Cargo.toml  bindgen.ps1  build.rs  wrapper.h
05_oidn/oidn-sys/src/: lib.rs  oidn.rs
05_oidn/oidn/src/: buffer.rs  device.rs  filter.rs  lib.rs
05_oidn/renderer/: Cargo.toml  shader_compile.bat
05_oidn/renderer/src/: glb.rs  lib.rs  renderer.rs  scene.rs
05_oidn/renderer/src/glb/: scene.rs  utils.rs
05_oidn/renderer/src/glb/scene/: model.rs
05_oidn/renderer/src/glb/scene/model/: material.rs  vertex.rs
05_oidn/renderer/src/glb/scene/model/material/: emissive.rs  normal.rs  pbr.rs
05_oidn/renderer/src/glb/utils/: glb_data.rs
05_oidn/renderer/src/shaders/spv/: after_denoise.comp.spv  before_denoise.comp.spv  output.comp.spv  raygen.rgen.spv  resolve.comp.spv
05_oidn/renderer/src/shaders/spv/material/: anyhit.rahit.spv  closesthit.rchit.spv  miss.rmiss.spv
05_oidn/renderer/src/shaders/spv/shadow/: anyhit_alpha_blend.rahit.spv  anyhit_alpha_mask.rahit.spv  closesthit.rchit.spv  miss.rmiss.spv
05_oidn/renderer/src/shaders/src/entry/: after_denoise.comp  before_denoise.comp  output.comp  raygen.rgen  resolve.comp
05_oidn/renderer/src/shaders/src/entry/material/: anyhit.rahit  closesthit.rchit  miss.rmiss
05_oidn/renderer/src/shaders/src/entry/shadow/: anyhit_alpha_mask.rahit
05_oidn/renderer/src/shaders/src/modules/: common.glsl  distribute_1d.glsl  payload.glsl  push_constants.glsl
05_oidn/renderer/src/shaders/src/modules/bxdf/: bxdf_common.glsl  lambert.glsl  standard.glsl  transparent.glsl
05_oidn/viewer/src/: main.rs  pane.rs  scene_view.rs
(+82 files in other folders)
