[package]
name = "hello_vulkan_raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
ash = "0.37.3"
ash-window = "0.12.0"
bytemuck = "1.14.0"
glam = { version = "0.24.2", features = ["bytemuck"] }
raw-window-handle = "0.5.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
