[package]
name = "renderer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ash.workspace = true
ashtray = { path = "../ashtray" }
bytemuck.workspace = true
glam.workspace = true
gpu-allocator.workspace = true
pollster = "0.3.0"
tobj = "4.0.0"
tokio.workspace = true
