[package]
name = "renderer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ash.workspace = true
ashtray = { path = "../ashtray" }
bytemuck.workspace = true
easy-gltf = "1.1.1"
glam.workspace = true
gpu-allocator.workspace = true
image = "0.24.7"
pollster = "0.3.0"
tobj = "4.0.0"
