[package]
name = "renderer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ash.workspace = true
ashtray = { path = "../ashtray" }
base64 = "0.21.7"
bytemuck.workspace = true
glam.workspace = true
gltf = { version = "1.4.0", features = ["KHR_materials_emissive_strength"] }
gpu-allocator.workspace = true
image = "0.24.7"
pollster = "0.3.0"
