[package]
name = "renderer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ash.workspace = true
ashtray = { path = "../ashtray" }
bytemuck.workspace = true
glam.workspace = true
glb = { path = "../glb" }
gpu-allocator.workspace = true
image = "0.24.7"
oidn = { path = "../oidn" }
pollster = "0.3.0"
